fix: hide scrollbar

--- a/client/src/components/card-button/styles.css
+++ b/client/src/components/card-button/styles.css
@@ -20,3 +20,12 @@
   align-items: center;
   height: 100vh;
 }
+
+.onlyoffice-plugin {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.onlyoffice-plugin::-webkit-scrollbar{
+  display: none;
+}
